# wasm-pdf-data-reader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  sonar-project.properties
.github/workflows/: master-sonarqube.yml  pull-request-ci.yml
docs/ai/: project-context.md  rules.md
src/: app_shell.rs  lib.rs  main.rs  native_app.rs  wasm_app.rs
src/bindings/: pdf_bridge.js
src/components/: app_header.rs  mod.rs  pdf_word_overlay.rs  pdf_workspace.rs  word_sidebar.rs  word_sidebar_empty.rs  word_sidebar_table.rs
src/models/: mod.rs  pdf_page_viewport.rs  pdf_text_item.rs
src/services/: js_bridge.rs  mod.rs  pdf_service.rs
src/styles/: app.css
tests/: app_tests.rs  integration.rs
tests/integration/: full_app_integration.rs
