[package]
name = "wasm-pdf-data-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.116"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"


[features]
default = ["csr"]
csr = ["leptos/csr"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "File",
  "FileList",
  "HtmlCanvasElement",
  "HtmlInputElement"
]

[package.metadata.leptos]
output-name = "wasm-pdf-data-reader"
site-root = "dist"
